--- a/config/database.yml
+++ b/config/database.yml
@@ -52,3 +52,13 @@ test:
   username: 
   password:
   timeout: 5000
+
+
+production:
+  adapter: postgresql
+  encoding: unicode
+  database: cp_development
+  pool: 5
+  username: 
+  password:
+  timeout: 5000
